[project]
name = "rhythmix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.42.16",
    "celery>=5.6.0",
    "essentia>=2.1b6.dev1389",
    "fastapi[standard]>=0.124.4",
    "ffmpeg-python>=0.2.0",
    "httpx>=0.28.1",
    "mypy-boto3-s3>=1.42.16",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
]
